# Bluetooth

./: Android.bp  CPPLINT.cfg  Cargo.toml  OWNERS  README  TEST_MAPPING  build.py  pyrightconfig.json
flags/: BUILD.gn  (+33 more)
sysprop/: Android.bp  BUILD.gn  gap.sysprop  hardware.sysprop
sysprop/exported_include/: android_bluetooth_sysprop.h
system/gd/: Android.bp  BUILD.gn  README.md  fuzz_test.cc  module.cc  module.h  module_unittest.cc  stack_manager.cc
system/gd/cert/: run
system/gd/common/: Android.bp  audit_log.cc  audit_log.h  bidi_queue.h  byte_array.h  byte_array_test.cc  circular_buffer.h  circular_buffer_test.cc  list_map.h  lru_cache.h  metric_id_manager.cc  metric_id_manager_unittest.cc  multi_priority_queue.h  numbers.h  numbers_test.cc  strings.h  strings_test.cc  sync_map_count_test.cc  type_helper.h
system/gd/crypto_toolbox/: crypto_toolbox_test.cc
system/gd/facade/: grpc_root_server.cc
system/gd/grpc/: grpc_event_queue.h  grpc_module.cc
system/gd/hal/: Android.bp  BUILD.gn  hci_hal_android.cc  hci_hal_host.cc  hci_hal_host_rootcanal.cc  hci_hal_host_test.cc  ranging_hal.h  ranging_hal_android.cc  ranging_hal_host.cc  snoop_logger.cc  snoop_logger.h  snoop_logger_socket.cc  snoop_logger_socket.h  snoop_logger_socket_test.cc  snoop_logger_socket_thread_test.cc  snoop_logger_test.cc  socket_hal.h  socket_hal_android.cc  socket_hal_host.cc  syscall_wrapper_impl.cc  syscall_wrapper_impl.h  syscall_wrapper_interface.h  syscall_wrapper_mock.h
system/gd/hci/: Android.bp  BUILD.gn  acl_manager.cc  acl_manager.h  address.h  address_with_type.h  class_of_device.h  command_interface.h  controller.cc  controller.h  controller_interface.h  controller_interface_mock.h  controller_mock.h  controller_test.cc  distance_measurement_manager.cc  distance_measurement_manager.h  distance_measurement_manager_mock.h  enum_helper.h  event_checkers.h  hci_interface.h  hci_layer.cc  hci_layer.h  hci_layer_fake.cc  hci_layer_fake.h  hci_layer_mock.h  hci_layer_test.cc  hci_layer_unittest.cc  hci_metrics_logging.cc  hci_metrics_logging.h  hci_packets_fuzz_test.cc  hci_packets_test.cc  le_address_manager.cc  le_address_manager.h  le_address_manager_test.cc  le_advertising_manager.cc  le_advertising_manager.h  le_advertising_manager_test.cc  le_periodic_sync_manager.h  le_periodic_sync_manager_test.cc  le_scanning_manager.cc  (+9 more)
system/gd/lpp/: Android.bp  BUILD.gn  lpp_offload_interface.h  lpp_offload_interface_mock.h  lpp_offload_manager.cc  lpp_offload_manager.h
(+1873 files in other folders)
